--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,12 @@ body {
     min-height: 100vh;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     user-select: none;
+    overflow-x: hidden;
 }
 
 :root {
     --cinza-texto-base: #666;
-    --vermelho-base: #b20000
+    --vermelho-base: #b20000;
 }
 
 .container {
@@ -53,9 +54,8 @@ a {
 }
 
 nav {
-    margin: 70px 100px;
-    margin-top: 150px;
-    transition: 0.4s ease-in;
+    border-radius: 0 !important;
+    width: 100vw;
 }
 
 .container-nav {
@@ -65,15 +65,11 @@ nav {
     width: 100%;
 }
 
-nav.sticky {
-    margin: 0px;
-    border-radius: 0;
-}
-
 .navbar-custom {
     background-color: #f8f9fa;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
     border-radius: 7px;
+    padding: 1.5rem 3rem ;
 }
 
 .nav-link {
@@ -82,7 +78,7 @@ nav.sticky {
 
 .selected {
     background-color: rgb(185, 38, 38);
-    color: white;
+    color: white !important;
 }
 
 nav ul {
@@ -100,6 +96,83 @@ nav ul {
     display: none;
     transition: 0.3s ease-in-out;
 }
+
+#menu-btn {
+    padding: .5rem;
+    border-radius: .2rem;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--vermelho-base);
+    line-height: 1.5rem;
+    text-align: center;
+    border: 0;
+    display: none;
+}
+
+#menu-btn > img {
+    width: 100%;
+    height: 100%;
+}
+
+#mobile-menu {
+    transition: right ease-in-out 0.5s;
+    height: 100vh;
+    width: 80vw;
+    max-width: 500px;
+    position: absolute;
+    background-color: white;
+    z-index: 9999;
+    padding: 2rem;
+    padding-right: 150px;
+    top: 0;
+    right: -500px;
+}
+
+#mobile-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#mobile-menu.active {
+    right: -100px;
+}
+
+#mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.mobile-menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#close-mobile-menu-btn {
+    padding: .5rem;
+    border-radius: .2rem;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    line-height: 1.5rem;
+    text-align: center;
+    border: 0;
+}
+
+#close-mobile-menu-btn img {
+    width: 100%;
+    height: 100%;
+}
+
+
+    .container-nav ul {
+        display: none;
+    }
+
+    #menu-btn {
+        display: block;
+    }
+
 
 /***************************************/
 .sectionum{
@@ -211,15 +284,15 @@ nav ul {
 /******************************************/
 
 /*********** HERO ***************/
-.first-section {
+.hero-section {
     min-height: 100vh;
-    background-image: url("../assets/images/aps-background-image.jpg");
+    background-image: url("../assets/making-of/mo-12.jpg");
     background-size: cover;
     position: relative;
     overflow: hidden;
 }
 
-.first-section .light-bg {
+.hero-section .light-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -229,7 +302,7 @@ nav ul {
     opacity: 0.6;
 }
 
-.first-section .container {
+.hero-section .container {
     padding: 4%;
     position: absolute;
     top: 30px;
@@ -240,33 +313,33 @@ nav ul {
     height: 100vh;
 }
 
-.first-section .svg-group {
+.hero-section .svg-group {
     position: relative;
     height: 100%;
     width: 40%;
 }
 
-.first-section .svg-group #processor-svg {
+.hero-section .svg-group #eco-svg {
     width: 200px;
     position: absolute;
-    top: 30%;
+    top: 20vh;
     transform: rotate(-10deg);
 }
 
-.first-section .svg-group #chart-svg {
+.hero-section .svg-group #eco2-svg {
     width: 100px;
     position: absolute;
-    top: 50%;
+    top: 40vh;
     left: 200px;
 }
 
-.first-section .svg-group #code-svg {
+.hero-section .svg-group #recycle-svg {
     width: 150px;
     position: absolute;
-    top: 60%;
+    top: 50vh;
 }
 
-.first-section .hero-content {
+.hero-section .hero-content {
     border-radius: 50%;
     font-size: 1.2rem;
     background-color: rgba(255, 255, 255, 0.6);
@@ -278,14 +351,20 @@ nav ul {
     position: relative;
 }
 
-.first-section .hero-content h1 {
+.hero-section .hero-content h1 {
     font-size: 3.5rem;
     margin-bottom: 2rem;
     font-weight: 600;
 }
 
-.first-section .hero-content span {
+.hero-section .hero-content span {
     color: rgb(185, 38, 38);
+}
+
+@media screen and (max-width: 1200px) {
+    .hero-section .svg-group {
+        display: none;
+    }
 }
 
 /***********************************/
@@ -336,4 +415,171 @@ footer .desenvolvedores li:hover a {
 ::-webkit-scrollbar-thumb {
     background-color: rgb(196, 11, 11);
     border-radius: 3px;
+}
+/*********** HERO RESPONSIVO ***************/
+.hero-section {
+    min-height: 100vh;
+    background-image: url("../assets/making-of/mo-12.jpg");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.hero-section .light-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.6;
+}
+
+.hero-section .container {
+    padding: 4%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    z-index: 1;
+}
+
+.hero-section .svg-group {
+    position: relative;
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+    display: none;
+}
+
+.hero-section .svg-group #eco-svg {
+    width: 120px;
+    position: relative;
+    top: 0;
+    transform: rotate(-10deg);
+}
+
+.hero-section .svg-group #eco2-svg {
+    width: 80px;
+    position: relative;
+    top: 10px;
+    left: 0;
+}
+
+.hero-section .svg-group #recycle-svg {
+    width: 100px;
+    position: relative;
+    top: 0;
+}
+
+.hero-section .hero-content {
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    background-color: rgba(255, 255, 255, 0.6);
+    box-shadow: 0 0 40px 60px rgba(255, 255, 255, 0.6);
+    width: 90%;
+    max-width: 800px;
+    padding: 2rem;
+}
+
+.hero-content-text {
+    position: relative;
+}
+
+.hero-section .hero-content h1 {
+    font-size: 2.8rem;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+}
+
+.hero-section .hero-content span {
+    color: rgb(185, 38, 38);
+}
+
+/* Media Queries para responsividade do Hero */
+@media screen and (min-width: 768px) {
+    .hero-section .container {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 4%;
+    }
+
+    .hero-section .svg-group {
+        display: flex;
+        width: 35%;
+        height: 100%;
+        display: block;
+        margin-bottom: 0;
+    }
+
+    .hero-section .svg-group #eco-svg {
+        width: 180px;
+        position: absolute;
+        top: 20vh;
+        transform: rotate(-10deg);
+    }
+
+    .hero-section .svg-group #eco2-svg {
+        width: 90px;
+        position: absolute;
+        top: 40vh;
+        left: 180px;
+    }
+
+    .hero-section .svg-group #recycle-svg {
+        width: 130px;
+        position: absolute;
+        top: 50vh;
+    }
+
+    .hero-section .hero-content {
+        width: 60%;
+        text-align: left;
+    }
+
+    .hero-section .hero-content h1 {
+        font-size: 3.2rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero-section .hero-content h1 {
+        font-size: 3.5rem;
+    }
+
+    .hero-section .svg-group #eco-svg {
+        width: 200px;
+    }
+
+    .hero-section .svg-group #eco2-svg {
+        width: 100px;
+        left: 200px;
+    }
+
+    .hero-section .svg-group #recycle-svg {
+        width: 150px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .hero-section .hero-content h1 {
+        font-size: 2rem;
+    }
+
+    .hero-section .hero-content {
+        font-size: 0.9rem;
+        padding: 1.5rem;
+    }
+
+    
 }
